Deleting/pasting should now work; added z-index.
Before, deleting/pasting text into the bar wouldn't work. Also,
on pages which have elements with a z-index, the list would
appear below them. Obviously, this will still happen when said
elements have a ridicuously high z-index.

--- a/content/style.css
+++ b/content/style.css
@@ -36,11 +36,12 @@
 
     background: #f5f5f5;
 
-    aborder-radius: 10px;
     box-shadow: rgba(100, 100, 100, 0.3) 0px 4px 20px;
 
     font-family: monospace;
     font-size: initial;
+
+    z-index: 7; /* why 7? why not? */
 }
 
 .switcheroo-container input {
