Added rudimentary new tab creation.
Added license. Cleaned up the key handling a bit.

--- a/content/style.css
+++ b/content/style.css
@@ -6,6 +6,7 @@
 {
     background: initial;
     border: initial;
+    box-sizing: initial;
     color: initial;
     cursor: initial;
     float: none;
@@ -14,9 +15,9 @@
     line-height: initial;
     margin: initial;
     padding: initial;
+    text-align: initial;
     vertical-align: initial;
     width: auto;
-    box-sizing: initial;
 }
 .switcheroo-container div { display: block; }
 .switcheroo-container img, .switcheroo-container input { display: inline; }
