Filtering no longer follows first tab like an idiot.
Small mechanism for knowing when you manually selected a tab from
the list instead of the first one.

--- a/src/content/style.css
+++ b/src/content/style.css
@@ -2,7 +2,9 @@
 
 .switcheroo-container input,
 .switcheroo-container div,
-.switcheroo-container img
+.switcheroo-container img,
+.switcheroo-container ul,
+.switcheroo-container li,
 {
     background: initial;
     border: initial;
