Stop switcheroos from stacking atop one another.
'Cause a switcheroo of a switcheroo ain't make no sense.

--- a/src/content/style.css
+++ b/src/content/style.css
@@ -4,7 +4,7 @@
 .switcheroo-container div,
 .switcheroo-container img,
 .switcheroo-container ul,
-.switcheroo-container li,
+.switcheroo-container li
 {
     background: initial;
     border: initial;
