--- a/src/content/style.css
+++ b/src/content/style.css
@@ -37,7 +37,7 @@ img, input { display: inline; }
     width: 60em;
     height: 400px;
 
-    background: #f5f5f5;
+    background: white;
 
     box-shadow: rgba(100, 100, 100, 0.3) 0px 4px 20px;
 
