--- a/src/content/style.css
+++ b/src/content/style.css
@@ -1,29 +1,3 @@
-/* we have to un-reset most styles so the containing page won't fuck us */
-
-input,
-div,
-img,
-ul,
-li
-{
-    background: initial;
-    border: initial;
-    box-sizing: initial;
-    color: initial;
-    cursor: initial;
-    float: none;
-    font-family: inherit;
-    height: auto;
-    line-height: initial;
-    margin: initial;
-    padding: initial;
-    text-align: initial;
-    vertical-align: initial;
-    width: auto;
-}
-div { display: block; }
-img, input { display: inline; }
-
 .switcheroo-container {
     position: fixed;
     display: flex;
@@ -37,12 +11,13 @@ img, input { display: inline; }
     width: 60em;
     height: 400px;
 
-    background: white;
+    color: #ddd;
+    background: #202020;
 
     box-shadow: rgba(100, 100, 100, 0.3) 0px 4px 20px;
 
     font-family: monospace;
-    font-size: initial;
+    font-size: 1.3em;
 
     /* this comment initially asked "why 7". #1 pointed out that "why not" is
     not a sufficiently good answer. so when the container is injected into page
@@ -53,28 +28,54 @@ img, input { display: inline; }
 input {
     outline: none;
     border: 0;
-    box-shadow: rgba(100, 100, 100, 0.3) 0px 4px 14px;
+    box-shadow: rgba(120, 120, 120, 0.3) 0px 4px 7px;
+
+    color: #f5f5f5;
+    background: #404040;
 
     padding-left: 1rem;
 
     height: 2rem;
+
+    font-family: inherit;
 }
 
 .switcheroo-list {
     flex: 1;
 
-    margin: 7px 0 0;
+    margin: 0;
     padding: 0;
 
     overflow-y: auto;
 }
 
+.switcheroo-list::-webkit-scrollbar-track {
+    background-color: #888;
+
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border-radius: 10px;
+}
+
+.switcheroo-list::-webkit-scrollbar {
+	width: 0.5em;
+}
+
+.switcheroo-list::-webkit-scrollbar-thumb {
+    background-color: #555;
+
+	border-radius: 10px;
+	box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
 .switcheroo-selected {
-    background : #eee;
+    background: hsla(284, 47%, 25%, 1);
+}
+.switcheroo-selected .switcheroo-url {
+    color: #907c97;
 }
 
 .switcheroo-list .switcheroo-item {
-    border-bottom: 1px solid #eee;
+    border-bottom: 1px solid hsla(0, 0%, 0%, 1);
     padding: 14px;
 }
 .switcheroo-list .switcheroo-item .switcheroo-title {
