--- a/src/popup/style.css
+++ b/src/popup/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
 }
 
-.switcheroo-container {
+.container {
     display: flex;
     flex-direction: column;
 
@@ -34,7 +34,7 @@ input {
     font-family: inherit;
 }
 
-.switcheroo-list {
+.list {
     flex: 1;
 
     margin: 0;
@@ -43,36 +43,36 @@ input {
     overflow-y: auto;
 }
 
-.switcheroo-list::-webkit-scrollbar-track {
+.list::-webkit-scrollbar-track {
     background-color: #888;
 
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
 }
 
-.switcheroo-list::-webkit-scrollbar {
+.list::-webkit-scrollbar {
     width: 0.5em;
 }
 
-.switcheroo-list::-webkit-scrollbar-thumb {
+.list::-webkit-scrollbar-thumb {
     background-color: #555;
 
     border-radius: 10px;
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 }
 
-.switcheroo-selected {
+.selected {
     background: hsla(284, 47%, 25%, 1);
 }
-.switcheroo-selected .switcheroo-url {
+.selected .url {
     color: #907c97;
 }
 
-.switcheroo-list .switcheroo-item {
+.list .item {
     border-bottom: 1px solid hsla(0, 0%, 0%, 1);
     padding: 14px;
 }
-.switcheroo-list .switcheroo-item .switcheroo-title {
+.list .item .title {
     vertical-align: middle;
     display: inline-block;
 
@@ -83,7 +83,7 @@ input {
     overflow: hidden;
     white-space: nowrap;
 }
-.switcheroo-list .switcheroo-item .switcheroo-url {
+.list .item .url {
     color: #bdbdbd;
     font-size: 0.9em;
     padding-top: 4px;
@@ -92,7 +92,7 @@ input {
     overflow: hidden;
     white-space: nowrap;
 }
-.switcheroo-list .switcheroo-item img {
+.list .item img {
     width: 1em;
     height: 1em;
     vertical-align: middle;
